--- a/src/Header.css
+++ b/src/Header.css
@@ -1,12 +1,16 @@
-.footer {
+.header {
   padding: 0.5em;
   width: 100vw;
   position: fixed;
-  bottom: 0;
+  top: 0;
   left: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: smaller;
+}
+.header > h1,
+.header > h2 {
+  margin: 0.25em;
 }
